--- a/config/my_controllers.yaml
+++ b/config/my_controllers.yaml
@@ -1,8 +1,7 @@
 controller_manager:
   ros__parameters:
     update_rate: 30
-    use_sim_time: true
-
+    # use_sim_time: true #comment for real robot
     diff_cont:
       type: diff_drive_controller/DiffDriveController
 
