--- a/config/nav2_params.yaml
+++ b/config/nav2_params.yaml
@@ -143,11 +143,11 @@ controller_server:
       debug_trajectory_details: True
       min_vel_x: 0.0
       min_vel_y: 0.0
-      max_vel_x: 0.30
+      max_vel_x: 0.5
       max_vel_y: 0.0
       max_vel_theta: 1.0
       min_speed_xy: 0.0
-      max_speed_xy: 0.26
+      max_speed_xy: 0.5
       min_speed_theta: 0.0
       # Add high threshold velocity for turtlebot 3 issue.
       # https://github.com/ROBOTIS-GIT/turtlebot3_simulations/issues/75
@@ -192,7 +192,7 @@ local_costmap:
       width: 3
       height: 3
       resolution: 0.025
-      robot_radius: 0.33
+      footprint: "[[-0.2, -0.18], [-0.2, 0.18],  [0.05, 0.26], [0.26, 0.26], [0.26, -0.26], [0.05, -0.26]]"
       plugins: ["voxel_layer", "inflation_layer"]
       inflation_layer:
         plugin: "nav2_costmap_2d::InflationLayer"
@@ -229,9 +229,9 @@ global_costmap:
       update_frequency: 1.0
       publish_frequency: 1.0
       global_frame: map
-      robot_base_frame: base_link
+      robot_base_frame: base_footprint
       use_sim_time: False
-      robot_radius: 0.33
+      footprint: "[[-0.2, -0.18], [-0.2, 0.18],  [0.05, 0.26], [0.26, 0.26], [0.26, -0.26], [0.05, -0.26]]"
       resolution: 0.05
       track_unknown_space: true
       plugins: ["static_layer", "obstacle_layer", "inflation_layer"]
@@ -340,7 +340,7 @@ velocity_smoother:
     smoothing_frequency: 20.0
     scale_velocities: False
     feedback: "OPEN_LOOP"
-    max_velocity: [0.30, 0.0, 1.0]
+    max_velocity: [0.50, 0.0, 1.0]
     min_velocity: [-0.26, 0.0, -1.0]
     max_accel: [2.5, 0.0, 3.2]
     max_decel: [-2.5, 0.0, -3.2]
